Fix nav unification forcing content spacing on tablet (#53746)

--- a/client/assets/stylesheets/_nav-unification.scss
+++ b/client/assets/stylesheets/_nav-unification.scss
@@ -253,7 +253,9 @@
 			transform: translateX( -100% );
 			padding: 71px 24px 24px;
 		}
+	}
 
+	@media only screen and ( max-width: 660px ) {
 		.layout.focus-sites:not( .is-section-post-editor ) .layout__primary .main,
 		.layout.focus-sidebar:not( .is-section-post-editor ) .layout__primary .main {
 			transform: translateX( 100% );
